# react-django-rest-boilerplate

./: README.md  docker-compose.yaml
client/: package-lock.json  package.json
client/src/: App.js  index.js
client/src/api/: index.js
client/src/api/queries/: index.js
client/src/components/Footer/: index.js
client/src/components/Forms/ConfirmEmailForm/: index.js
client/src/components/Forms/CreateTaskForm/: index.js  validation.js
client/src/components/Forms/EditTaskForm/: index.js
client/src/components/Forms/LoginForm/: index.js
client/src/components/Forms/ModalForm/: index.js
client/src/components/Forms/ResetPasswordForm/: index.js
client/src/components/Forms/SignUpForm/: index.js
client/src/components/Forms/UserEditForm/: index.js
client/src/components/Loader/: index.js
client/src/components/Main/: index.js
client/src/components/NavBar/: index.js
client/src/components/PageNotFound/: index.js
client/src/components/SideBar/: index.js
client/src/components/Staticstics/: GetTasks.js  GetUsers.js
client/src/components/Tasks/Modals/: ModalDelete.js
client/src/components/UserProfile/: index.js
client/src/hoc/: notAuth.js
client/src/pages/ConfirmEmail/: index.js
client/src/pages/Dashboard/: index.js
client/src/pages/Home/: index.js
client/src/pages/Login/: index.js
client/src/pages/ResetPassword/: index.js
client/src/pages/SignUp/: index.js
server/: Dockerfile  pyproject.toml
server/accounts/: models.py  serializers.py  urls.py  views.py
server/server/: urls.py
server/server/settings/: base.py
(+4 files in other folders)
